= 0.80 / IN PROGRES

    * New sequential number 'seq_num' versioning strategy

= 0.70 / 2010-08-28

	This release brings yet another significant rewrite. Building
	on the MEF integration and innovations of 0.6, many improvements
	have been made to make writing commands easier and safer.

	* New 'connections' command that provides a command line interface
	  for viewing, adding, editing and removing stored connection
	  strings in the config file.

	* Revamped help system that provides detailed info on the
	  usage of all commands, including custom commands.

	* Smarter, more robust parsing of migrations scripts that contain
	  GO keywords. Special thanks to the Subtext project who we
	  borrowed these improvements from!
	
	* New strongly-typed parsing of command line arguments with
	  support DataAnnotation attributes for validation and
	  automatic integration with the help system.
	
	* New CommandBase and DatabaseCommandBase classes for building
	  custom commands.
	  
	* Rewritten data access routines that wrap all bulk operations
	  in transactions. Also much smarter database connection
	  handling.
	
	* Beefed up unit tests suite with full coverage of all critical
	  routines.

	* Changed unit tests to use SQL Server CE 3.5.1 instead of
	  SQL Server Express. This means anyone can run the unit tests
	  now without having to setup a database first.

	* Major updates to the build script to use Psake instead of NAnt
	  to run the unit tests after compilation and improvements for
	  integrating with TeamCity.
	  
	* Lots of bug fixes.

= 0.60 / 2010-01-28

	This version has been completely rewritten from the ground up using
	.Net 3.5 and the Managed Extensibility Framework.
	
	* Completely new directory structure and codebase
	
	* MEF has been used to assist in the inner workings of the application
	  as well as allow for new logs and commands to be created.
	
	* Unit Tests Project has been added - tests use the NUnit framework
	