@@ -112,6 +112,7 @@
     <Compile Include="Provider\ConfigurableTypeElement.cs" />
     <Compile Include="Provider\ConfigurableTypeSection.cs" />
     <Compile Include="SchemaException.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="ValueSetValidatorAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
