@@ -7,14 +7,17 @@
   <appSettings>
     <!-- migrateFolder is the path to where your migration scripts are stored. -->
     <add key="migrateFolder" value=".\migrations\" />
+    
     <!-- versionStrategy must be either 'utc_time', 'local_time', 'seq_num'.
-    'utc_time' is recommended for most accurate versioning.  -->
+         'utc_time' is recommended for most accurate versioning.  -->
     <add key="versionStrategy" value="utc_time" />
+    
     <!-- pluginFolder is the path to where your DNM plugins are loaded from. -->
     <add key="pluginFolder" value=".\plugins\" />
+      
     <!-- logFullErrors should be 'true' or 'false' whether
-    you want the stack traces logged or just the messages.
-    Default is 'false'. -->
+         you want the stack traces logged or just the messages.
+         Default is 'false'. -->
     <add key="logFullErrors" value="false" />
   </appSettings>
 
