@@ -102,6 +102,7 @@
     <Compile Include="CommandHelpWriterUnitTests.cs" />
     <Compile Include="Commands\GenerateScriptCommandArgsUnitTests.cs" />
     <Compile Include="Commands\MigrateCommandArgsUnitTests.cs" />
+    <Compile Include="StringExtensionsUnitTests.cs" />
     <Compile Include="DatabaseCommandArgumentsUnitTests.cs" />
     <Compile Include="Data\ScriptSplitterTests.cs" />
     <Compile Include="DisposableFile.cs" />
